# kissd

./: README.md
kissd-0.1/: configure  configure.in
kissd-0.1/src/: cmd.c  cmd.h  kissd.c  kissd.h  server.c  server.h  thread.h  util.c
kissd-0.2/: ChangeLog  Makefile.in  NEWS  configure  configure.in
kissd-0.2/src/: Makefile.am  Makefile.in  cmd.c  config.h.in  kissd.c  kissd.h  server.c  thread.h  util.c  util.h
kissd-0.3/: ChangeLog  Makefile.in  README  configure  configure.in
kissd-0.3/src/: Makefile.am  Makefile.in  cmd.c  discover.c  discover.h  kissd.c  server.c  thread.c
